Bug 1245075 patch 1 - Remove assertion, since it can fire during frame destruction.  r=dholbert  a=lizzard

Without this patch, patch 2 will cause assertions since
nsFrame::DestroyFrom calls nsFrame::HasCSSAnimations (at a time when the
child frame has been destroyed), which calls into the code modified in
patch 2 to call GetStyleFrame.